--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-raml",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Eslint rules for RAML",
   "keywords": [
     "eslint",
@@ -21,7 +21,8 @@
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "raml-parser": "^0.8.16"
   },
   "devDependencies": {
     "chai": "^3.4.1",
@@ -45,8 +46,8 @@
     "url": "git+https://github.com/galk-in/eslint-plugin-raml.git"
   },
   "bugs": {
-    "url": "https://github.com/galk-in/eslint-plugin-ralm/issues"
+    "url": "https://github.com/galk-in/eslint-plugin-raml/issues"
   },
-  "url": "https://github.com/galk-in/eslint-plugin-ralm",
+  "url": "https://github.com/galk-in/eslint-plugin-raml",
   "license": "MIT"
 }
