--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "deasync": "^0.1.4",
     "jshint": "^2.8.0",
-    "raml-parser": "^0.8.16"
+    "raml-parser": "^0.8.16",
+    "tv4": "^1.2.7"
   },
   "devDependencies": {
     "chai": "^3.4.1",
