--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-raml",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Eslint rules for RAML",
   "keywords": [
     "eslint",
@@ -21,10 +21,8 @@
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
-    "deasync": "^0.1.4",
     "jshint": "^2.8.0",
-    "raml-parser": "^0.8.16",
-    "tv4": "^1.2.7"
+    "raml-1-parser": "^0.2.4"
   },
   "devDependencies": {
     "chai": "^3.4.1",
