--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-raml",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Eslint rules for RAML",
   "keywords": [
     "eslint",
@@ -21,15 +21,15 @@
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
-    "raml-1-parser": "^1.1.0"
+    "raml-1-parser": "^1.1.3"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
-    "mocha": "^3.0.0",
-    "coveralls": "^2.11.11",
-    "eslint": "^3.1.1",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.14",
+    "eslint": "^3.6.0",
     "eslint-config-xo-space": "^0.14.0",
-    "istanbul": "^0.4.2"
+    "istanbul": "^0.4.5",
+    "mocha": "^3.0.2"
   },
   "engines": {
     "node": ">=4"
